--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
+		<link rel="icon" href="img/icon.jpg">
 		<link rel="stylesheet" href="css/index.css">
-		<title>清云官网</title>
+		<title>清云官网 - 打开科技的新纪元!</title>
 	</head>
-	<body>
-		<div class="context" id="info">
-			<h1 style="color: rgba(0,255,0);">网站正在制作中!~</h1>
+	<body class="centre">
+		<div class="nav">
+			<nav class="nav-a centre">
+				<a href="#" class="active">首页</a>
+				<a href="#" class="hover">开发工具</a>
+				<a href="#" class="hover">开发文档</a>
+			</nav>
 		</div>
-		<style type="text/css">
-			body{
-				text-align: center;
-				background-color: #0f0f0f;
-			}
-		</style>
+		<div class="big-img centre">
+			<h1 class="big-title">打开新时代大门</h1>
+			<p class="big-title">我们致力于打造新时代的产物，例如KOOK的机器人，清云启动器，清云系统调试工具等项目都是基于这个理念制作的</p>
+		</div>
+		<br><br>
+		<br><br>
+		<br><br>
+		<br><br>
+		<footer class="footer">
+			<img src="img/icon.jpg" alt="icon" id="footer-img">
+		</footer>
 	</body>
 </html>
